Changed a bit response model from save endpoint